# fs-analysis

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  release.config.mjs  renovate.json  sync-version.mjs
.claude-plugin/: marketplace.json
.github/workflows/: deploy.yml
fs-analysis/: __init__.py  __main__.py
plugins/fs-analysis/.claude-plugin/: plugin.json
plugins/fs-analysis/skills/analyzing-financial-statements/: SKILL.md
plugins/fs-analysis/skills/analyzing-financial-statements/assets/: template.xlsx
plugins/fs-analysis/skills/analyzing-financial-statements/references/: indices.md  mapping.md  narrative.md  output-format.md
plugins/fs-analysis/skills/analyzing-financial-statements/scripts/: build_report.py  ingest.py  render_pdf.py
plugins/fs-analysis/skills/analyzing-financial-statements/scripts/fsa/: __init__.py  flatten.py  mapping.py  metrics.py  model.py  narrative.py  populate.py  soffice.py  verify.py
tests/: conftest.py  test_model.py  test_my_class.py  test_narrative.py  test_pipeline.py  test_populate.py  test_verify.py
tests/fixtures/: sample_normalized.json
